Restore quick-start and context in SECURITY_MODEL.md
Agent-Logs-Url: https://github.com/pfirmstone/DirtyChai/sessions/c09a2b32-af3e-453f-be44-d031aa344f0e

Co-authored-by: pfirmstone <11625778+pfirmstone@users.noreply.github.com>